--- a/WebDevelopment/JavaScriptFrameworks/03.Modernizr/01.ShowSupportedHtmlCssFeatures/index.html
+++ b/WebDevelopment/JavaScriptFrameworks/03.Modernizr/01.ShowSupportedHtmlCssFeatures/index.html
@@ -12,7 +12,7 @@ browser type, version, OS and device. Use Modernizr.js to detect the features
 <head>
     <title></title>
     <script src="scripts/libs/modernizr-2.6.2.js"></script>
-    <script src="scripts/libs/au-parser.js"></script>
+    <script src="scripts/libs/ua-parser.js"></script>
     <script src="scripts/libs/class.js"></script>
     <script src="scripts/libs/jquery-2.0.3.js"></script>
     <script src="scripts/libs/mustache.js"></script>
