--- a/WebDevelopment/JavaScriptFrameworks/04.RequireJS/01.StudentsSinglePageApp/index.html
+++ b/WebDevelopment/JavaScriptFrameworks/04.RequireJS/01.StudentsSinglePageApp/index.html
@@ -17,18 +17,21 @@ Task 1
 - Use mustache.js for templating the data
 - Use jQuery, prototype.js or native XmlHttpRequest to make the AJAX calls
 
-1. First start the Services (Students.Services project) to be able to load the data
-2. Then click on each student to see their marks (marks will be rendered in "another page")
-3. Refresh the page to return back to students list
 -->
 
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>RequireJS Task 1</title>
+	<title>Students Single Page App</title>
 	<script src="Scripts/libs/require.js" data-main="Scripts/app-config"></script>
 </head>
 <body>
+<!--   
+        1. First start the Services (Students.Services project) to be able to load the data
+        2. Then click on each student to see their marks (marks will be rendered in "another page")
+        3. Refresh the page to return back to students list
+    -->
+
     <!-- Students template -->
     <script type="x-mustache-template" id="student-template">
         <div id="{{id}}">
@@ -40,14 +43,13 @@ Task 1
 
      <!-- Marks template-->
      <script type="x-mustache-template" id="marks-template">
-			{{#.}} 
+			{{#.}}
                 {{subject}}: <strong>{{score}}</strong>							
             {{/.}}
             {{^.}}	   
-                This student has no marks, yet	  						
+                This student has no marks, yet 						
             {{/.}}
     </script>
-
     <div id="content"></div>
 </body>
 </html>
