Added some text to ComboBox.html

--- a/WebDevelopment/JavaScriptFrameworks/04.RequireJS/02.ComboBoxControl/ComboBox.html
+++ b/WebDevelopment/JavaScriptFrameworks/04.RequireJS/02.ComboBoxControl/ComboBox.html
@@ -66,9 +66,13 @@ The ComboBox should have the following usage:
     </div>
     </script>
     <div id="task-description">
-        <p>
-            If an item is clicked, it becomes the selected item and the ComboBox collapses <br />
+        <header>
+            <h3>ComboBox control (like a dropdown list)</h3>
+        </header>
+        <p>            
+            Initially only a single item, the selected item, is visible (the ComboBox is collapsed) <br />
             When the selected item is clicked, all other items are shown (the ComboBox is expanded) <br />
+            If an item is clicked, it becomes the selected item and the ComboBox collapses <br />           
         </p>
     </div>
     <div id="content"></div>
