added a text message in index.html

--- a/WebDevelopment/JavaScriptFrameworks/05.SammyJS/BattleGame.WebClient/index.html
+++ b/WebDevelopment/JavaScriptFrameworks/05.SammyJS/BattleGame.WebClient/index.html
@@ -127,7 +127,11 @@
         #open-games-title {
             text-align: center;
         }
-
+		
+		 .important{
+            text-align: center;
+        }
+		
     </style>
 </head>
 <body>
@@ -169,7 +173,9 @@
             {{/.}} 
         </ul>	
     </script>    
-
+	<div>
+        <p class="important"><strong>Clear browser cache and the localStorage - just in case :-)</strong></p>
+    </div>
     <div id="wrapper">
         <header>
             <h1>Telerik Academy Battle Game</h1>
